
package ar.com.splitmate;

public enum Role {
    ADMIN,
    MEMBER
}
